src/App.css
/* ... */
.single-con{
    width: 60%;
    margin-top: 2em;
}
.single-order{
    display: flex;
    justify-content: space-between;
    border-bottom:  .5px solid black;
    margin-bottom: 1.5em;
}
.single-order svg{
    cursor: pointer;
}

.single-order svg:hover{
    animation: squish 300ms ease-in-out;
}
.single-order p{
    display: flex;
    align-items: center;
}

.checkout:hover {
    background: #006e52;
}

.buy-now{
    display: inline-block;
        outline: 0;
        cursor: pointer;
        border: none;
        padding: 0 56px;
        height: 45px;
        line-height: 45px;
        border-radius: 7px;
        background-color: #0070f3;
        color: white;
        font-weight: 400;
        font-size: 16px;
        box-shadow: 0 4px 14px 0 rgb(0 118 255 / 39%);
        transition: background 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
        margin: 2em auto 0 auto;
        display: block;
    

}

.buy-now:hover {
    background: rgba(0, 118, 255, 0.9);
    box-shadow: 0 6px 20px rgb(0 118 255 / 23%);
}

.founder{
    margin-top: 2em;
    width: fit-content;
    padding: 1em;
    border-radius: 10px;
    margin-left: 5em;
    background-color: lightgrey;

}

.about-femi{
    width: 98%;
    margin: 2em auto 0 auto;

}
.founder img{
    width: 300px;
    height: 300px;
    object-fit: cover;
}

.empty-cart{
    height: 100vh;
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
}
#single-reserve{
    height: 500px;
    width: 400px;
}

#single-reserve h5{
    font-size: 1.5rem;
}
#single-reserve button {
    display: block;
    margin: 2em auto 0 auto;
    /* Added semicolon and comma */
    outline: 0;
    cursor: pointer;
    border: 2px solid #000;
    border-radius: 3px;
    color: #fff;
    background: #000;
    font-size: 20px;
    font-weight: 600;
    line-height: 28px;
    padding: 12px 20px;
    text-align: center;
    transition: all .15s cubic-bezier(.4, 0, .2, 1);
    /* Combined transition properties */
}

#single-reserve button:hover {
    color: #000;
    background: rgb(255, 218, 87);
}

#single-reserve p{
    width: 98%;
    margin:  1em auto 0 auto;
    display: flex;
        align-items: center;
}

@media only screen and (min-width: 800px) and (max-width: 1800px) {
    .menu {
        width: 75%;
    }
        .order-con {
            width: 75%;
        }
}

@media screen and (max-width: 675px) {

    header{
        display: flex;
        justify-content: space-between;
        align-items: center;
    }
    .logo{
        margin-left: 1em;
        cursor: pointer;
    }
.ham-menu {
        display: block;
        margin-right: 1em;
    }

    .big, .big-icons{
        display: none;
    }

    .ham ul{
        flex-direction: column;
    }

    #ham-con{
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100dvh;
        background-color: #fff;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        z-index: 1;
        transition: transform 200ms ease-in-out;
    }

    .ham-nav{
        display: flex;
        flex-direction: column;
    
    }

    .ham{

        width: 100%;
    }

    .ham ul{

        width: 100%;
        
    }
    .ham ul li{
        text-align: center;
        width: 100%;
        padding: 0;
        margin: 0;
        position: relative;
    }

        .ham ul li:hover {
        color: white;
        /* Change text color on hover */
        a{
            color: white;
        }
    }

        .hov::before{
            position: absolute;
            content: "";
            top: 0;
            left: 0;
            background-color: black;
            width: 0%;
            height: 100%;
            z-index: -1;
            transition: width 300ms ease-in-out;
        }

        .hov:hover::before{
            width: 100%;
        }


                .nav ul a:hover {
                    text-decoration: none;

                }
.ham-icon{
        position: absolute;
        left: 50%;
        translate: -50%;
        bottom: .5rem;
    }

        .benefits-con {
        font-size: 1rem;
    }

    .cancel{
        position: absolute;
        top: 4%;
        right: 4%;
    }



    .reserve-con{
        aspect-ratio: 1/1;

    }

    .welcome h1{
        font-size: 1.8rem;
        margin: 1em;
    }

    .check{
        font-size: 1.5rem;
    }

    .reservation h4{
        font-size: 1.5rem;
    }

    .menu{
        width: 97%;
    }
    .indiItem{
        width: 96%;
        margin: 0 auto 1em auto;
        max-width: 600px;
    }
        .indiItem .img {
            border-radius: 10px;
            overflow: hidden;
            max-width: 700px;
            width: 100%;

            margin: 0 auto;
            
        }

    #message{
        width: 98%;
        margin: 2em auto 1em auto;
    }

    .order-con{
        width: 100%;
        justify-content: center;
    }

    .item-con{
        width: 100%;
    }
    .item{
        width: 100%;
        margin-left: auto;
        margin-right: auto;
    
    }
        .order-con .order-img {
            width: 100%;
            height: 250px;
        }

    .single-con {
        width: 98%;
        margin: 2em auto 0 auto;
    }

    .founder{
        margin-left: 0;
    }

        .single-order p {
            font-size: .7rem;
        }

                .empty-cart {
                    font-size: .5rem;
                }
}

